force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>