force-app/main/default/objects/Shipment__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Courier</label>
    <referenceTo>Courier__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>