force-app/main/default/objects/Shipment__c/fields/Mode_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Shipment__c</fullName>
    <label>Mode Of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>