force-app/main/default/objects/Shipment__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking</label>
    <referenceTo>Tracking__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>